<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ypsitos.espressolab.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/balanceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BALANCE:"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp"
        android:textSize="22dp"/>
    <TextView
        android:id="@+id/balanceTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="22dp"
        android:layout_alignTop="@+id/balanceTitle"
        android:layout_toRightOf="@+id/balanceTitle"
        android:layout_toEndOf="@+id/balanceTitle" />

    <EditText
        android:id="@+id/incomingBalanceEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Input:"
        android:gravity="center_horizontal|center"
        />
</RelativeLayout>
