...

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_action_add" />

...
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|start"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_action_minus"
        />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/nextFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_action_arrow_right"
        />
...
